# PreFOS

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  NOTICE  README.md
.github/workflows/: cmake.yml  cuda.yml  sanitizer.yml
benchmarks/: README.md
cmake/: PreFOSConfig.cmake.in
docs/: PRESOLVE.md
include/PreFOS/: PreFOS.h
include/common/: DirtyRows.h  LinearPropagationKernel.h  LinearPropagationKernelImpl.h  ParallelRowDetection.h  ParallelRowReduction.h  TransformationLog.h
src/common/: ParallelRowDetection.c  ParallelRowReduction.c
src/prefos/: PREFOS_Internal.h  PREFOS_Presolver.c
src/prefos/cones/: PREFOS_ExponentialCone.c  PREFOS_ExponentialCone.h  PREFOS_PositiveSemidefiniteCone.c  PREFOS_PositiveSemidefiniteCone.h  PREFOS_PowerCone.c  PREFOS_PowerCone.h
src/prefos/core/: PREFOS_AffineConeCompaction.c  PREFOS_AffineConeCompaction.h  PREFOS_AffineConeFaces.c  PREFOS_AffineConeFaces.h  PREFOS_MatrixCompaction.c  PREFOS_MatrixCompaction.h  PREFOS_PassManager.c  PREFOS_PassManager.h  PREFOS_Postsolve.c  PREFOS_Problem.c  PREFOS_Timer.c  PREFOS_Timer.h
src/prefos/explorers/: PREFOS_AffineConeAggregation.c  PREFOS_AffineConeAggregation.h  PREFOS_AffineConeBounds.c  PREFOS_AffineConeBounds.h  PREFOS_AffineConePropagation.c  PREFOS_AffineConePropagation.h  PREFOS_AffineFaceElimination.c  PREFOS_AffineFaceRows.c  PREFOS_AffineFaceSubstitution.c  PREFOS_AffineFaceSubstitution.h  PREFOS_AffineFaceSubstitutionInternal.h  PREFOS_BoundedDoubletons.c  PREFOS_ColumnFixing.c  PREFOS_ColumnReductionInternal.h  PREFOS_ColumnReductions.c  PREFOS_ColumnReductions.h  PREFOS_ColumnSubstitution.c  PREFOS_ColumnWorkspace.c  PREFOS_ConeActivity.c  PREFOS_ConeActivity.h  PREFOS_ConePropagation.c  PREFOS_ConePropagation.h  PREFOS_CudaAffineConePropagation.cu  PREFOS_CudaBackend.c  PREFOS_CudaBackend.h  PREFOS_CudaColumnWorkspace.cu  PREFOS_CudaConeActivity.cu  PREFOS_CudaConePropagation.cu  PREFOS_CudaLinearPropagation.cu  PREFOS_CudaLinearPropagation.h  PREFOS_CudaLinearPropagationKernels.cuh  PREFOS_CudaLinearPropagationStub.c  PREFOS_CudaMatrixCompaction.cu  PREFOS_CudaParallelColumns.cu  PREFOS_CudaParallelRows.cu  PREFOS_CudaWorkspaceInternal.cuh  PREFOS_FreeColumnSubstitution.c  PREFOS_FreeColumnSubstitution.h  PREFOS_LinearPropagation.c  PREFOS_LinearPropagation.h  (+9 more)
tests/: benchmark_cbf_prefos.py  benchmark_clarabel_gurobi.py  benchmark_exp_power_cbf.py  benchmark_lp_pslp.py  benchmark_sdpa_prefos.py  cbf_scalar.py  check_license_headers.py  differential_conic_prefos.py  differential_prefos.py  test_cbf_scalar.py  test_column_reductions.c  test_gurobi_cone_adapter.py  test_prefos.c  test_prefos_cpp.cpp  test_sdpa_adapter.py
tests/cmake_consumer/: CMakeLists.txt  main.c
